--- a/pertemuan02.html
+++ b/pertemuan02.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 2 - Variabel dan Tipe Data</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 2: Variabel & Tipe Data</h3>
+                    <h3 class="subtitle">Pertemuan 2: Variabel & Tipe Data</h3>
                 </div>
             </section>
 
@@ -70,10 +73,10 @@
                 <div class="text-left" style="font-size: 0.8em; margin-top: 30px;">
                     <p>Setelah pertemuan ini, Anda diharapkan mampu:</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
-                        <div class="card" style="padding: 15px;">✅ Mendefinisikan Variabel</div>
-                        <div class="card" style="padding: 15px;">✅ Mengidentifikasi Tipe Data</div>
-                        <div class="card" style="padding: 15px;">✅ Menggunakan Operator</div>
-                        <div class="card" style="padding: 15px;">✅ Melakukan Konversi Data</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Mendefinisikan Variabel</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Mengidentifikasi Tipe Data</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menggunakan Operator</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Melakukan Konversi Data</div>
                     </div>
                 </div>
             </section>
@@ -91,7 +94,7 @@
                     </div>
                     <div class="flex-col card" style="background: #fafafa; border: 2px dashed #999;">
                         <div style="text-align: center;">
-                            <div style="font-size: 3em;">📦</div>
+                            <div style="font-size: 3em;"><i class="bi bi-box"></i></div>
                             <div
                                 style="border: 2px solid #333; padding: 10px; margin: 10px auto; width: 50%; background: white;">
                                 "Budi"</div>
@@ -129,7 +132,7 @@ print(umur)      # 20
                 <h3>Aturan Penamaan Variabel</h3>
                 <div class="flex-container" style="align-items: flex-start;">
                     <div class="flex-col card" style="border-left: 5px solid #28a745;">
-                        <h4 style="color: #28a745;">✅ Boleh (Benar)</h4>
+                        <h4 style="color: #28a745;"><i class="bi bi-check-circle"></i> Boleh (Benar)</h4>
                         <ul class="text-smaller">
                             <li><code>nama</code>, <code>nama_lengkap</code></li>
                             <li><code>nilai1</code>, <code>_kuota</code></li>
@@ -138,7 +141,7 @@ print(umur)      # 20
                         </ul>
                     </div>
                     <div class="flex-col card" style="border-left: 5px solid #dc3545;">
-                        <h4 style="color: #dc3545;">❌ Tidak Boleh (Salah)</h4>
+                        <h4 style="color: #dc3545;"><i class="bi bi-x-circle"></i> Tidak Boleh (Salah)</h4>
                         <ul class="text-smaller">
                             <li><code>1nama</code> (Awal angka)</li>
                             <li><code>nama-lengkap</code> (Pakai strip)</li>
@@ -331,7 +334,7 @@ print("Rp " + str(harga))  # "Rp 25000"
                 <div class="card card-highlight text-left">
                     <p class="text-small">Fungsi <code>input()</code> digunakan untuk menerima masukan dari keyboard.
                     </p>
-                    <p class="text-small" style="color: red;">⚠️ WARNING: Hasil input() SELALU bertipe STRING!</p>
+                    <p class="text-small" style="color: red;"><i class="bi bi-exclamation-triangle"></i> WARNING: Hasil input() SELALU bertipe STRING!</p>
                 </div>
                 <pre><code class="python" data-trim>
 nama = input("Masukkan nama: ")
@@ -390,7 +393,7 @@ print(nama)
             <section>
                 <h3>Hands-On Practice 2</h3>
                 <div class="card text-left">
-                    <h4>Program Konversi Suhu 🌡️</h4>
+                    <h4>Program Konversi Suhu <i class="bi bi-thermometer-half"></i></h4>
                     <hr>
                     <p class="text-small">Buat program yang:</p>
                     <ol class="text-small">
@@ -409,20 +412,20 @@ print(nama)
             <section>
                 <h3>Ringkasan Hari Ini</h3>
                 <ul class="text-small" style="line-height: 1.8;">
-                    <li>📦 <strong>Variabel</strong>: Wadah penyimpan data.</li>
-                    <li>🔠 <strong>Tipe Data</strong>: <code>int</code>, <code>float</code>, <code>str</code>,
+                    <li><i class="bi bi-box"></i> <strong>Variabel</strong>: Wadah penyimpan data.</li>
+                    <li><i class="bi bi-type"></i> <strong>Tipe Data</strong>: <code>int</code>, <code>float</code>, <code>str</code>,
                         <code>bool</code>.
                     </li>
-                    <li>➕ <strong>Operator</strong>: Alat untuk memanipulasi data (+, -, *, /, %).</li>
-                    <li>🔄 <strong>Casting</strong>: Mengubah tipe data (misal string ke int).</li>
+                    <li><i class="bi bi-plus-circle"></i> <strong>Operator</strong>: Alat untuk memanipulasi data (+, -, *, /, %).</li>
+                    <li><i class="bi bi-arrow-repeat"></i> <strong>Casting</strong>: Mengubah tipe data (misal string ke int).</li>
                     <li>⌨️ <strong>Input</strong>: Selalu menghasilkan string, perlu casting jika ingin angka.</li>
                 </ul>
             </section>
 
             <!-- === SLIDE 17: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 2 📝</h3>
-                <div class="flex-container card" style="background: #fff3cd; border: 1px solid #ffeeba;">
+                <h3>Tugas Pertemuan 2 <i class="bi bi-list-check"></i></h3>
+                <div class="flex-container card card-warning">
                     <div class="flex-col text-left">
                         <ol class="text-smaller">
                             <li><strong>Kalkulator BMI:</strong> Input berat(kg) & tinggi(m), hitung BMI.</li>
@@ -431,7 +434,7 @@ print(nama)
                         </ol>
                     </div>
                     <div class="flex-col text-center">
-                        <div style="font-size: 3em;">⚠️</div>
+                        <div style="font-size: 3em;"><i class="bi bi-exclamation-triangle"></i></div>
                         <p class="text-smaller"><strong>Deadline:</strong><br>H-1 Pertemuan Berikutnya</p>
                     </div>
                 </div>
@@ -459,6 +462,7 @@ else:
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -466,12 +470,16 @@ else:
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
