--- a/pertemuan03.html
+++ b/pertemuan03.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 3 - Percabangan</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 3: Percabangan (Branching)</h3>
+                    <h3 class="subtitle">Pertemuan 3: Percabangan (Branching)</h3>
                 </div>
             </section>
 
@@ -69,10 +72,10 @@
                 <div class="text-left" style="font-size: 0.8em; margin-top: 30px;">
                     <p>Setelah mengikuti pertemuan ini, mahasiswa diharapkan mampu:</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
-                        <div class="card" style="padding: 15px;">✅ Menjelaskan konsep percabangan</div>
-                        <div class="card" style="padding: 15px;">✅ Menggunakan operator perbandingan</div>
-                        <div class="card" style="padding: 15px;">✅ Menulis struktur if dan if-else</div>
-                        <div class="card" style="padding: 15px;">✅ Memecahkan masalah dengan logika</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menjelaskan konsep percabangan</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menggunakan operator perbandingan</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menulis struktur if dan if-else</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Memecahkan masalah dengan logika</div>
                     </div>
                 </div>
             </section>
@@ -89,10 +92,10 @@
                     </div>
                     <div class="flex-col card" style="background: #333; color: white;">
                         <div style="text-align: center;">
-                            <h4>🚦 Lampu Lalu Lintas</h4>
+                            <h4><i class="bi bi-traffic-light"></i> Lampu Lalu Lintas</h4>
                             <hr style="border-color: #555;">
                             <div style="text-align: left; padding-left: 20px;">
-                                <p style="color: #ff5f5f;">🔴 MERAH &rarr; BERHENTI</p>
+                                <p style="color: #ff5f5f;"><i class="bi bi-circle-fill" style="color: red;"></i> MERAH &rarr; BERHENTI</p>
                                 <p style="color: #f1c40f;">🟡 KUNING &rarr; PERSIAPAN</p>
                                 <p style="color: #2ecc71;">🟢 HIJAU &rarr; JALAN</p>
                             </div>
@@ -107,10 +110,10 @@
                 <div class="flex-container" style="align-items: flex-start;">
                     <div class="flex-col text-left">
                         <ul class="text-small">
-                            <li>✅ Memvalidasi input user</li>
-                            <li>✅ Mengambil keputusan berdasarkan nilai</li>
-                            <li>✅ Menangani berbagai kasus</li>
-                            <li>✅ Mengontrol alur program</li>
+                            <li><i class="bi bi-check-circle"></i> Memvalidasi input user</li>
+                            <li><i class="bi bi-check-circle"></i> Mengambil keputusan berdasarkan nilai</li>
+                            <li><i class="bi bi-check-circle"></i> Menangani berbagai kasus</li>
+                            <li><i class="bi bi-check-circle"></i> Mengontrol alur program</li>
                         </ul>
                     </div>
                     <div class="flex-col card">
@@ -294,10 +297,10 @@ print(f"Hasil: {hasil}")
 
             <!-- === SLIDE 12: WARNING INFINITE LOOP === -->
             <section>
-                <h3>⚠️ Peringatan: Infinite Loop</h3>
+                <h3><i class="bi bi-exclamation-triangle"></i> Peringatan: Infinite Loop</h3>
                 <div class="flex-container">
                     <div class="flex-col card" style="border-left: 5px solid #28a745;">
-                        <h4 style="color: #28a745; font-size: 0.8em;">✅ BENAR</h4>
+                        <h4 style="color: #28a745; font-size: 0.8em;"><i class="bi bi-check-circle"></i> BENAR</h4>
                         <pre><code class="python" style="font-size: 0.7em;">
 x = 0
 while x < 5:
@@ -306,7 +309,7 @@ while x < 5:
                             </code></pre>
                     </div>
                     <div class="flex-col card" style="border-left: 5px solid #dc3545;">
-                        <h4 style="color: #dc3545; font-size: 0.8em;">❌ SALAH (BAHAYA)</h4>
+                        <h4 style="color: #dc3545; font-size: 0.8em;"><i class="bi bi-x-circle"></i> SALAH (BAHAYA)</h4>
                         <pre><code class="python" style="font-size: 0.7em;">
 x = 0
 while x < 5:
@@ -367,18 +370,18 @@ while x < 5:
                 <h3>Ringkasan Hari Ini</h3>
                 <div class="card">
                     <ul class="text-small" style="columns: 2;">
-                        <li>✅ <strong>Percabangan</strong>: `if`, `if-else`, `if-elif-else`.</li>
-                        <li>✅ <strong>Operator Perbandingan</strong>: `==`, `!=`, `<`, `>`, `<=`, `>=`.</li>
-                        <li>✅ <strong>Boolean</strong>: Hasil evaluasi `True` atau `False`.</li>
-                        <li>✅ <strong>Nested If</strong>: If di dalam if.</li>
+                        <li><i class="bi bi-check-circle"></i> <strong>Percabangan</strong>: `if`, `if-else`, `if-elif-else`.</li>
+                        <li><i class="bi bi-check-circle"></i> <strong>Operator Perbandingan</strong>: `==`, `!=`, `<`, `>`, `<=`, `>=`.</li>
+                        <li><i class="bi bi-check-circle"></i> <strong>Boolean</strong>: Hasil evaluasi `True` atau `False`.</li>
+                        <li><i class="bi bi-check-circle"></i> <strong>Nested If</strong>: If di dalam if.</li>
                     </ul>
                 </div>
             </section>
 
             <!-- === SLIDE 16: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 3 📝</h3>
-                <div class="card text-left" style="background: #fff3cd; border: 1px solid #ffeeba;">
+                <h3>Tugas Pertemuan 3 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-warning text-left">
                     <ol class="text-small">
                         <li><strong>Kalkulator Suhu:</strong> Konversi lengkap (C ke F, F ke C).</li>
                         <li><strong>Sistem Grade + Absensi:</strong> Input nilai & absensi. Jika absensi < 80%, otomatis
@@ -419,6 +422,7 @@ while x < 5:
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -426,12 +430,16 @@ while x < 5:
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
