--- a/pertemuan06.html
+++ b/pertemuan06.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 6 - List</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 6: List (Daftar)</h3>
+                    <h3 class="subtitle">Pertemuan 6: List (Daftar)</h3>
                 </div>
             </section>
 
@@ -70,10 +73,10 @@
                 <div class="text-left" style="font-size: 0.8em; margin-top: 30px;">
                     <p>Setelah pertemuan ini, Anda diharapkan mampu:</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
-                        <div class="card" style="padding: 15px;">✅ Menjelaskan konsep List</div>
-                        <div class="card" style="padding: 15px;">✅ Membuat & mengakses list</div>
-                        <div class="card" style="padding: 15px;">✅ Memanipulasi data list</div>
-                        <div class="card" style="padding: 15px;">✅ Menggunakan method list</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menjelaskan konsep List</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Membuat & mengakses list</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Memanipulasi data list</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menggunakan method list</div>
                     </div>
                 </div>
             </section>
@@ -87,7 +90,7 @@
                             dalam satu variabel.</p>
                         <p>Bayangkan sebuah <strong>Rak Buku</strong> atau Loker yang bernomor.</p>
                     </div>
-                    <div class="flex-col card" style="background: #e3f2fd;">
+                    <div class="flex-col card card-info">
                         <div style="display: flex; gap: 5px; justify-content: center; margin-bottom: 10px;">
                             <div style="border: 2px solid #333; padding: 10px; background: white;">A</div>
                             <div style="border: 2px solid #333; padding: 10px; background: white;">B</div>
@@ -323,20 +326,20 @@ for i, item in enumerate(buah):
             <section>
                 <h3>Ringkasan Hari Ini</h3>
                 <ul class="text-small">
-                    <li>✅ <strong>List</strong>: Wadah data mutable (bisa diubah), terurut, index mulai 0.</li>
-                    <li>✅ <strong>Akses</strong>: <code>list[0]</code>, <code>list[-1]</code>,
+                    <li><i class="bi bi-check-circle"></i> <strong>List</strong>: Wadah data mutable (bisa diubah), terurut, index mulai 0.</li>
+                    <li><i class="bi bi-check-circle"></i> <strong>Akses</strong>: <code>list[0]</code>, <code>list[-1]</code>,
                         <code>list[start:end]</code>.</li>
-                    <li>✅ <strong>Operasi</strong>: <code>append</code>, <code>pop</code>, <code>remove</code>,
+                    <li><i class="bi bi-check-circle"></i> <strong>Operasi</strong>: <code>append</code>, <code>pop</code>, <code>remove</code>,
                         <code>sort</code>.</li>
-                    <li>✅ <strong>Analisa</strong>: <code>len</code>, <code>max</code>, <code>min</code>,
+                    <li><i class="bi bi-check-circle"></i> <strong>Analisa</strong>: <code>len</code>, <code>max</code>, <code>min</code>,
                         <code>sum</code>.</li>
                 </ul>
             </section>
 
             <!-- === SLIDE 14: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 6 📝</h3>
-                <div class="card text-left" style="background: #fff3cd; border: 1px solid #ffeeba;">
+                <h3>Tugas Pertemuan 6 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-warning text-left">
                     <ol class="text-small">
                         <li><strong>List Processing:</strong>
                             <br>Program statistik & filtering data angka.
@@ -358,7 +361,7 @@ for i, item in enumerate(buah):
             <section>
                 <h3>Pertemuan Berikutnya</h3>
                 <div class="card" style="background: #333; color: white;">
-                    <h1>QUIZ 1 📝</h1>
+                    <h1>QUIZ 1 <i class="bi bi-list-check"></i></h1>
                     <hr style="border-color: #555;">
                     <p>Materi: Pertemuan 1 - 6</p>
                 </div>
@@ -382,6 +385,7 @@ for i, item in enumerate(buah):
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -389,12 +393,16 @@ for i, item in enumerate(buah):
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
