--- a/pertemuan09.html
+++ b/pertemuan09.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 9 - Fungsi</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 9: Fungsi (Functions)</h3>
+                    <h3 class="subtitle">Pertemuan 9: Fungsi (Functions)</h3>
                 </div>
             </section>
 
@@ -69,10 +72,10 @@
                 <div class="text-left" style="font-size: 0.8em; margin-top: 30px;">
                     <p>Setelah mengikuti pertemuan ini, mahasiswa diharapkan mampu:</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
-                        <div class="card" style="padding: 15px;">✅ Menjelaskan konsep Fungsi</div>
-                        <div class="card" style="padding: 15px;">✅ Membuat fungsi dengan return</div>
-                        <div class="card" style="padding: 15px;">✅ Memahami scope variabel</div>
-                        <div class="card" style="padding: 15px;">✅ Memecah masalah jadi sub-masalah</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Menjelaskan konsep Fungsi</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Membuat fungsi dengan return</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Memahami scope variabel</div>
+                        <div class="card" style="padding: 15px;"><i class="bi bi-check-circle"></i> Memecah masalah jadi sub-masalah</div>
                     </div>
                 </div>
             </section>
@@ -246,8 +249,8 @@ print(luas_persegi(4))  # 16
 
             <!-- === SLIDE 11: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 9 📝</h3>
-                <div class="card text-left" style="background: #fff3cd; border: 1px solid #ffeeba;">
+                <h3>Tugas Pertemuan 9 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-warning text-left">
                     <ul class="text-small">
                         <li><strong>1. Konversi Suhu (Functions):</strong>
                             <br>Buat fungsi <code>c_to_f(c)</code>, <code>f_to_c(f)</code>, dll. User memilih menu
@@ -266,7 +269,7 @@ print(luas_persegi(4))  # 16
             <!-- === SLIDE 12: NEXT WEEK === -->
             <section>
                 <h3>Pertemuan Berikutnya</h3>
-                <h4>Manipulasi String 🔡</h4>
+                <h4>Manipulasi String <i class="bi bi-fonts"></i></h4>
                 <p class="text-small">Kita akan belajar cara mengolah teks lebih dalam.</p>
                 <pre><code class="python">
 teks = "Halo Dunia"
@@ -284,6 +287,7 @@ print(teks.replace("a", "o")) # "Holo Dunio"
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -291,12 +295,16 @@ print(teks.replace("a", "o")) # "Holo Dunio"
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
