--- a/pertemuan13.html
+++ b/pertemuan13.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 13 - CSV File</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 13: File External (CSV)</h3>
+                    <h3 class="subtitle">Pertemuan 13: File External (CSV)</h3>
                 </div>
             </section>
 
@@ -200,8 +203,8 @@ df = df.drop_duplicates()
 
             <!-- === SLIDE 10: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 13 📝</h3>
-                <div class="card text-left" style="background: #fff3cd; border: 1px solid #ffeeba;">
+                <h3>Tugas Pertemuan 13 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-warning text-left">
                     <ul class="text-small">
                         <li><strong>Analisis Data Nilai:</strong>
                             <br>- Baca <code>nilai_mhs.csv</code>.
@@ -218,7 +221,7 @@ df = df.drop_duplicates()
             <!-- === SLIDE 11: NEXT WEEK === -->
             <section>
                 <h3>Pertemuan Berikutnya</h3>
-                <h4>Final Mini Project & Algoritma 🚀</h4>
+                <h4>Final Mini Project & Algoritma <i class="bi bi-rocket"></i></h4>
                 <p class="text-small">Persiapan tugas akhir kelompok.</p>
                 <ul class="text-small" style="columns: 2;">
                     <li>Pembagian Kelompok</li>
@@ -237,6 +240,7 @@ df = df.drop_duplicates()
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -244,12 +248,16 @@ df = df.drop_duplicates()
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
