--- a/pertemuan14.html
+++ b/pertemuan14.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="lms-url" content="https://lms.itera.ac.id">
 
     <title>Pertemuan 14 - Mini Project</title>
 
@@ -15,9 +16,11 @@
 
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <button class="theme-toggle" type="button" aria-label="Toggle theme" title="Toggle theme"><i class="bi bi-moon"></i></button>
     <div class="reveal">
         <!-- Persistent Footer -->
         <div class="footer-branding">
@@ -35,7 +38,7 @@
             <section>
                 <div class="title-box">
                     <h1>Pengenalan Komputasi</h1>
-                    <h3 style="color: #666;">Pertemuan 14: Algoritma & Mini Project</h3>
+                    <h3 class="subtitle">Pertemuan 14: Algoritma & Mini Project</h3>
                 </div>
             </section>
 
@@ -57,7 +60,7 @@
             <!-- === SLIDE 3: MINI PROJECT INFO === -->
             <section>
                 <h3>Pengumuman Final Mini Project</h3>
-                <div class="card" style="background: #e3f2fd;">
+                <div class="card card-info">
                     <ul class="text-small text-left">
                         <li><strong>Tujuan:</strong> Membuat aplikasi analisis data sederhana menggunakan Python.</li>
                         <li><strong>Tim:</strong> 4-5 Orang per kelompok.</li>
@@ -212,8 +215,8 @@ SELESAI
 
             <!-- === SLIDE 10: TUGAS === -->
             <section>
-                <h3>Tugas Pertemuan 14 📝</h3>
-                <div class="card text-left" style="background: #e1f5fe; border: 1px solid #b3e5fc;">
+                <h3>Tugas Pertemuan 14 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-info text-left">
                     <p class="text-small"><strong>Output Kelompok (Submit di GC/E-learning):</strong></p>
                     <ol class="text-small">
                         <li>Nama Kelompok & Anggota.</li>
@@ -226,13 +229,14 @@ SELESAI
 
             <!-- === SLIDE 11: CLOSING === -->
             <section>
-                <h1>Selamat Berkarya! 🚀</h1>
+                <h1>Selamat Berkarya! <i class="bi bi-rocket"></i></h1>
                 <p>Manfaatkan waktu praktikum untuk diskusi kelompok.</p>
             </section>
 
         </div>
     </div>
 
+    <script src="js/theme-toggle.js"></script>
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
@@ -240,12 +244,16 @@ SELESAI
     <script>
         Reveal.initialize({
             hash: true,
+            progress: true,
             center: true,
             transition: 'slide',
             slideNumber: 'c/t',
             plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
         });
     </script>
+    <script src="js/emoji-to-icons.js"></script>
+    <script src="js/auto-layout.js"></script>
+    <script src="js/slide-enhancements.js"></script>
 </body>
 
 </html>
